--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sveltekit-api-fetch",
-    "version": "0.1.0",
-    "author": "Laurent Stéphenne  <laurent@guibi.ca> (https://blog.encodeart.dev)",
+    "version": "0.3.0",
+    "author": "Laurent Stéphenne  <laurent@guibi.ca>",
     "description": "Adding type safety to SvelteKit's server endpoints.",
     "keywords": [
         "sveltekit",
@@ -22,23 +22,34 @@
         "dist"
     ],
     "exports": {
+        "./package.json": "./package.json",
         ".": {
             "types": "./dist/index.d.ts",
+            "import": "./dist/index.js",
             "svelte": "./dist/index.js"
+        },
+        "./vite": {
+            "types": "./dist/vite/index.d.ts",
+            "import": "./dist/vite/index.js",
+            "svelte": "./dist/vite/index.js"
         }
     },
     "svelte": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "peerDependencies": {
         "@sveltejs/kit": "1.x",
-        "svelte": "3.x",
+        "svelte": "^3.55.0 || ^4.0.0-next.0 || ^4.0.0",
         "zod": "3.x"
     },
     "devDependencies": {
         "@sveltejs/kit": "^1.20.2",
+        "@types/node": "^20.3.2",
+        "acorn": "^8.9.0",
+        "acorn-walk": "^8.2.0",
+        "glob": "^10.3.0",
         "prettier": "^2.8.8",
-        "svelte": "^3.59.1",
         "typescript": "^5.1.3",
+        "vite": "^4.3.9",
         "zod": "^3.21.4"
     },
     "type": "module",
