--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "acorn-walk": "^8.2.0",
         "glob": "^10.3.0",
         "prettier": "^2.8.8",
+        "prettier-plugin-organize-imports": "^3.2.2",
         "typescript": "^5.1.3",
         "vite": "^4.3.9",
         "zod": "^3.21.4"
