--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sveltekit-api-fetch",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "Laurent Stéphenne <laurent@guibi.ca>",
     "description": "Adding type safety to SvelteKit's server endpoints.",
     "keywords": [
@@ -52,16 +52,18 @@
         "zod": "3.x"
     },
     "devDependencies": {
-        "@sveltejs/kit": "^1.20.2",
-        "@types/node": "^20.3.2",
-        "acorn": "^8.9.0",
-        "acorn-walk": "^8.2.0",
-        "glob": "^10.3.0",
+        "@sveltejs/kit": "^1.21.0",
+        "@types/node": "^20.3.3",
         "prettier": "^2.8.8",
         "prettier-plugin-organize-imports": "^3.2.2",
-        "typescript": "^5.1.3",
+        "typescript": "^5.1.6",
         "vite": "^4.3.9",
         "zod": "^3.21.4"
+    },
+    "dependencies": {
+        "acorn": "^8.9.0",
+        "acorn-walk": "^8.2.0",
+        "glob": "^10.3.1"
     },
     "type": "module",
     "packageManager": "pnpm@8.5.1+",
