--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sveltekit-api-fetch",
-    "version": "1.0.1",
+    "version": "1.0.5",
     "author": "Laurent Stéphenne <laurent@guibi.ca>",
     "description": "Adding type safety to SvelteKit's server endpoints.",
     "keywords": [
@@ -19,32 +19,28 @@
         "url": "https://github.com/Guibi1/sveltekit-api-fetch"
     },
     "files": [
-        "dist"
+        "dist",
+        "LICENSE",
+        "README.md"
     ],
-    "main": "./dist/index.js",
-    "svelte": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "types": "dist/index.d.ts",
+    "typesVersions": {
+        "*": {
+            "vite": [
+                "dist/vite/index.d.ts"
+            ]
+        }
+    },
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "svelte": "./dist/index.js",
             "import": "./dist/index.js"
         },
         "./vite": {
             "types": "./dist/vite/index.d.ts",
-            "svelte": "./dist/vite/index.js",
             "import": "./dist/vite/index.js"
-        }
-    },
-    "typesVersions": {
-        ">4.0": {
-            "index.d.ts": [
-                "./dist/index.d.ts"
-            ],
-            "vite": [
-                "./dist/vite/index.d.ts"
-            ]
-        }
+        },
+        "./package.json": "./package.json"
     },
     "peerDependencies": {
         "@sveltejs/kit": "1.x",
