--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "peerDependencies": {
         "@sveltejs/kit": "^1.22.0",
         "svelte": "^3.55.0 || ^4.0.0-next.0 || ^4.0.0",
-        "zod": "3.x"
+        "vite": "^4.3.9",
+        "zod": "^3.20.0"
     },
     "devDependencies": {
         "@types/node": "^20.3.3",
         "prettier": "^3.0.0",
-        "prettier-plugin-organize-imports": "^3.2.2",
-        "vite": "^4.3.9"
+        "prettier-plugin-organize-imports": "^3.2.2"
     },
     "dependencies": {
         "glob": "^10.3.1",
