--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sveltekit-api-fetch",
-    "version": "3.0.1",
+    "version": "3.1.0",
     "author": "Laurent Stéphenne <laurent@guibi.ca>",
     "description": "Adding type safety to SvelteKit's server endpoints.",
     "keywords": [
@@ -28,6 +28,9 @@
         "*": {
             "vite": [
                 "dist/vite/index.d.ts"
+            ],
+            "server": [
+                "dist/server/index.d.ts"
             ]
         }
     },
@@ -39,6 +42,10 @@
         "./vite": {
             "types": "./dist/vite/index.d.ts",
             "import": "./dist/vite/index.js"
+        },
+        "./server": {
+            "types": "./dist/server/index.d.ts",
+            "import": "./dist/server/index.js"
         },
         "./package.json": "./package.json"
     },
