--- a/package.json
+++ b/package.json
@@ -50,18 +50,19 @@
         "./package.json": "./package.json"
     },
     "peerDependencies": {
-        "@sveltejs/kit": "^1.22.0",
-        "svelte": "^3.55.0 || ^4.0.0-next.0 || ^4.0.0",
-        "vite": "^4.3.9",
+        "@sveltejs/kit": "^1.22.5",
+        "svelte": "^3.55.0 || ^4.0.0",
+        "vite": "^4.4.9",
         "zod": "^3.20.0"
     },
     "devDependencies": {
-        "@types/node": "^20.3.3",
-        "prettier": "^3.0.0",
-        "prettier-plugin-organize-imports": "^3.2.2"
+        "@types/node": "^20.4.9",
+        "prettier": "^3.0.1",
+        "prettier-plugin-organize-imports": "^3.2.3",
+        "vite": "^4.4.9"
     },
     "dependencies": {
-        "glob": "^10.3.1",
+        "@sveltejs/kit": "^1.22.5",
         "typescript": "^5.1.6",
         "zod": "^3.21.4"
     },
