--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sveltekit-typesafe-api",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "author": "Laurent Stéphenne <laurent@guibi.ca>",
     "description": "Adding type safety to SvelteKit's server endpoints and fetches.",
     "keywords": [
@@ -50,24 +50,23 @@
         "./package.json": "./package.json"
     },
     "peerDependencies": {
-        "@sveltejs/kit": "^1.22.5",
-        "svelte": "^3.55.0 || ^4.0.0",
-        "vite": "^4.4.9",
+        "@sveltejs/kit": "^2.3.0",
+        "svelte": "^4.2.0",
+        "vite": "^5.0.0",
         "zod": "^3.20.0"
     },
     "devDependencies": {
-        "@types/node": "^20.5.1",
-        "prettier": "^3.0.2",
-        "prettier-plugin-organize-imports": "^3.2.3",
-        "vite": "^4.4.9"
+        "@types/node": "^20.11.5",
+        "prettier": "^3.2.4",
+        "prettier-plugin-organize-imports": "^3.2.4",
+        "vite": "^5.0.11"
     },
     "dependencies": {
-        "@sveltejs/kit": "^1.22.6",
-        "typescript": "^5.1.6",
-        "zod": "^3.22.2"
+        "@sveltejs/kit": "^2.3.5",
+        "typescript": "^5.3.3",
+        "zod": "^3.22.4"
     },
     "type": "module",
-    "packageManager": "pnpm@8.5.1+",
     "scripts": {
         "build": "tsc",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
